Copy edits. Layout improvements.

--- a/src/stylesheets/_classes.scss
+++ b/src/stylesheets/_classes.scss
@@ -29,6 +29,10 @@ small {
   @include print-pageBreakAfter();
 }
 
+.print-pageBreakBefore {
+  @include print-pageBreakBefore()
+}
+
 .screen-only {
   @include screen-only();
 }
