--- a/src/stylesheets/base/_mixins.scss
+++ b/src/stylesheets/base/_mixins.scss
@@ -75,3 +75,9 @@
     page-break-after: always;
   }
 }
+
+@mixin print-pageBreakBefore(){
+  @media print {
+    page-break-before: always;
+  }
+}
