--- a/src/styles/_classes.styl
+++ b/src/styles/_classes.styl
@@ -1,3 +1,7 @@
+// Vuetify
+.theme--light.application
+  background none
+
 .print
   $print_only()
 
@@ -11,9 +15,13 @@
     min-width 100%
     height 100%
     min-height 100%
+    overflow-y auto
 
-.print-break-before
-  $print_pageBreakBefore()
+.print-break
+  +$print()
+    content ' '
+    display block
+    page-break-before always
 
 .print-break-after
   $print_pageBreakAfter()
@@ -37,5 +45,6 @@ for $num in (1..12)
     +$print()
       $width = (100/12 * $num) * 1% !important
       // +print()
+      // display block
       flex-basis $width
       max-width $width
