H tags have less line-height, needed for mobile

--- a/src/styles/_elements.styl
+++ b/src/styles/_elements.styl
@@ -19,6 +19,7 @@ for $num in (1..6)
     font-family: $theme.font.family.secondary
     font-size $fontSize
     font-weight: $theme.font.weight.light
+    line-height 1.3em
     padding-bottom 0.3em
     // margin-bottom 0.5em
 
