Transition implemented into base styling

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -4,4 +4,5 @@
 @require('./_mixins');
 @require('./_elements');
 @require('./_classes');
+@require('./_transitions');
 @require('./_flexboxPrintCompatibility');
