--- a/src/styles/_libraries.styl
+++ b/src/styles/_libraries.styl
@@ -1,1 +1,5 @@
 @require('~rupture/rupture/index.styl');
+// @see https://github.com/iobuhov/stylus-bem-sugar
+@require('~stylus-bem-sugar/bem-sugar.styl');
+// @require('~nib/index.styl'); // Can't use with Vuetify
+// @import 'bem-sugar'
