Style: Swapped Roboto font for Montserrat

--- a/src/styles/_fonts.styl
+++ b/src/styles/_fonts.styl
@@ -1,4 +1,5 @@
-@require '~roboto-fontface/css/roboto/roboto-fontface.css';
+// @require '~roboto-fontface/css/roboto/roboto-fontface.css';
+@require '~typeface-montserrat/index.css';
 // Material design icons
 // @see https://materialdesignicons.com/
 @require '~@mdi/font/css/materialdesignicons.css';
