Styling: Multiple fixes.

--- a/src/styles/_elements.styl
+++ b/src/styles/_elements.styl
@@ -24,6 +24,7 @@ for $num in (1..6)
   h{$num}
     $print_fixFirstLetter()
     color: darken($theme.colors.accent, 50%)
+    display block
     font-family: $theme.font.family.secondary
     font-size $fontSize
     font-weight: $theme.font.weight.light
