--- a/src/styles/_elements.styl
+++ b/src/styles/_elements.styl
@@ -63,6 +63,9 @@ ol
     padding-right 0.5em
 
 section
-  margin-bottom 1em
+  padding 2em 0 2em 0
   position relative
   width 100%
+
+  +$print()
+    padding 0 0 0em 0
